Adding js file-openweather api and local storage

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </header>
         <main>
             <section class="display"> 
-                <h1 class="name"></h1>
-                <p class="desc"></p>
-                <p class="temp"><span></span></p>
+                <h1 class="name">Addis Ababa</h1>
+                <p class="desc">Scattered clouds</p>
+                <p class="temp"><span>286.91</span></p>
             </section>
         </main>
     </div>
